<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextEpisodeNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/episode_hint_number"
        android:inputType="text" />


    <Button
        android:id="@+id/btnApplyFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters" />
</LinearLayout>
